CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

PROJECT(algorithms_and_data_structure)

ADD_SUBDIRECTORY(linkedlist/circularlist)
ADD_SUBDIRECTORY(linkedlist/linkedlist)
ADD_SUBDIRECTORY(queue/arrayqueue)
ADD_SUBDIRECTORY(queue/linkedlistqueue)
ADD_SUBDIRECTORY(queue/priorityqueue)
ADD_SUBDIRECTORY(set/set)
ADD_SUBDIRECTORY(set/quickfind)
ADD_SUBDIRECTORY(set/quickunion)
ADD_SUBDIRECTORY(set/weightedquickunion)
ADD_SUBDIRECTORY(sort/bubblesort)
ADD_SUBDIRECTORY(stack/arraystack)
ADD_SUBDIRECTORY(stack/linkedliststack)
ADD_SUBDIRECTORY(tree/avltree)
ADD_SUBDIRECTORY(tree/binarysearchtree)
ADD_SUBDIRECTORY(tree/binarytree)
ADD_SUBDIRECTORY(tree/expressiontree)
