CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

PROJECT(algorithms_and_data_structure)

ADD_SUBDIRECTORY(datacompression/huffmancoding)
ADD_SUBDIRECTORY(dynamicprogramming/factorial)
ADD_SUBDIRECTORY(dynamicprogramming/fibonacci)
ADD_SUBDIRECTORY(dynamicprogramming/longestcommonsubsequence)
ADD_SUBDIRECTORY(hash/chaininghash)
ADD_SUBDIRECTORY(hash/openaddresshash)
ADD_SUBDIRECTORY(linkedlist/circularlist)
ADD_SUBDIRECTORY(linkedlist/linkedlist)
ADD_SUBDIRECTORY(queue/arrayqueue)
ADD_SUBDIRECTORY(queue/linkedlistqueue)
ADD_SUBDIRECTORY(queue/priorityqueue)
ADD_SUBDIRECTORY(set/set)
ADD_SUBDIRECTORY(set/quickfind)
ADD_SUBDIRECTORY(set/quickunion)
ADD_SUBDIRECTORY(set/weightedquickunion)
ADD_SUBDIRECTORY(sort/bubblesort)
#ADD_SUBDIRECTORY(sort/externaldesign)
ADD_SUBDIRECTORY(sort/heapsort)
ADD_SUBDIRECTORY(sort/insertionsort)
ADD_SUBDIRECTORY(sort/mergesort)
ADD_SUBDIRECTORY(sort/quicksort)
ADD_SUBDIRECTORY(sort/selectionsort)
ADD_SUBDIRECTORY(sort/shellsort)
ADD_SUBDIRECTORY(sort/treesort)
ADD_SUBDIRECTORY(stack/arraystack)
ADD_SUBDIRECTORY(stack/linkedliststack)
ADD_SUBDIRECTORY(string/patternmatching)
# ADD_SUBDIRECTORY(string/suffixtree)
ADD_SUBDIRECTORY(string/ternarysearch)
ADD_SUBDIRECTORY(string/trie)
ADD_SUBDIRECTORY(tree/avltree)
ADD_SUBDIRECTORY(tree/binarysearchtree)
ADD_SUBDIRECTORY(tree/binarytree)
ADD_SUBDIRECTORY(tree/expressiontree)
ADD_SUBDIRECTORY(tree/twothreefourtree)
